# JaroViewer

./: .clang-format  .clang-tidy  .clangd  .gitignore  3  CMakeLists.txt  README.md  debug.sh  premake5.lua  setup.sh  version2.md
Libraries/Include/assimp/: revision.h
Libraries/Include/glad/: glad.h
Projects/App/fragment/: Basic.fs  FullWhite.fs  Library.fs  Wireframe.fs  postprocessing.fs
Projects/App/geometry/: Wireframe.gs
Projects/App/src/: main.cpp
Projects/App/vertex/: Basic.vs  Library.vs  Wireframe.vs
Projects/JaroViewer/header/: Asset.h  AssetManager.h  Camera.h  (+22 more)
docs/: Brainstorm.txt
lib/: CMakeLists.txt
lib/headers/: Camera.hpp  Engine.hpp  InputHandler.hpp  MaterialManager.hpp  ObjectManager.hpp  Shader.hpp  ShaderManager.hpp  Tools.hpp  UniformBuffer.hpp  basicShaders.hpp  camera.hpp  cubemap.hpp  directionalLight.hpp  engine.hpp  frameBuffer.hpp  inputHandler.hpp  lightSet.hpp  material.hpp  materialManager.hpp  object.hpp  objectManager.hpp  pointLight.hpp  postProcessor.hpp  shaderManager.hpp  spotlight.hpp  texture2D.hpp  window.hpp
lib/headers/core/: engine.hpp  timer.hpp
lib/headers/graphics/: cubemap.hpp  material.hpp  materialManager.hpp
lib/headers/input/: inputHandler.hpp
lib/headers/jaroViewer/core/: engine.hpp  eventSender.hpp  tools.hpp  window.hpp
lib/headers/jaroViewer/geometry/: basicShapes.hpp
lib/headers/jaroViewer/graphics/: cubemap.hpp  frameBuffer.hpp  material.hpp  materialManager.hpp  texture2D.hpp
lib/headers/jaroViewer/input/: inputHandler.hpp
lib/headers/jaroViewer/lighting/: directionalLight.hpp  pointLight.hpp  spotlight.hpp
lib/headers/jaroViewer/modifiers/: autoModifier.hpp  modifier.hpp  wavingModifier.hpp
lib/headers/jaroViewer/rendering/: basicShaders.hpp  gpuVector.hpp  postProcessor.hpp  shader.hpp  shaderManager.hpp  uniformBuffer.hpp
lib/headers/jaroViewer/scene/: camera.hpp  object.hpp  objectManager.hpp
lib/headers/lighting/: directionalLight.hpp  pointLight.hpp  spotlight.hpp
lib/headers/modifiers/: autoModifier.hpp  modifier.hpp
lib/headers/rendering/: basicShaders.hpp  gpuVector.hpp  postProcessor.hpp
lib/headers/scene/: camera.hpp  object.hpp  objectManager.hpp
lib/src/: Camera.cpp  Engine.cpp  InputHandler.cpp  MaterialManager.cpp  Object.cpp  ObjectManager.cpp  Shader.cpp  ShaderManager.cpp  Timer.cpp  UniformBuffer.cpp  Window.cpp  camera.cpp  cubemap.cpp  directionalLight.cpp  engine.cpp  frameBuffer.cpp  glad.c  inputHandler.cpp  lightSet.cpp  material.cpp  materialManager.cpp  object.cpp  objectManager.cpp  pointLight.cpp  postProcessor.cpp  shader.cpp  shaderManager.cpp  spotlight.cpp  texture2D.cpp  timer.cpp  uniformBuffer.cpp  window.cpp
lib/src/core/: engine.cpp  timer.cpp  tools.cpp  window.cpp
lib/src/graphics/: cubemap.cpp  frameBuffer.cpp  material.cpp  materialManager.cpp  texture2D.cpp
lib/src/input/: inputHandler.cpp
lib/src/lighting/: directionalLight.cpp  lightSet.cpp  pointLight.cpp  spotlight.cpp
lib/src/modifiers/: modifier.cpp  wavingModifier.cpp
lib/src/rendering/: gpuVector.cpp  postProcessor.cpp  shader.cpp  shaderManager.cpp  uniformBuffer.cpp
lib/src/scene/: camera.cpp  object.cpp  objectManager.cpp
research/cmake/: CMakeLists.txt  build
research/premake/: main.cpp  premake5.lua
src/: .clangd  compile_commands.json  debug.sh  premake5.lua  setup.sh
(+248 files in other folders)
